Added changes: -user Service -auth middleware -> isAuthenticated, isMember, isAdmin
